--- a/configs/stable-diffusion/v1-finetune.yaml
+++ b/configs/stable-diffusion/v1-finetune.yaml
@@ -13,7 +13,7 @@ model:
     channels: 4
     cond_stage_trainable: true   # Note: different from the one we trained before
     conditioning_key: crossattn # LDMs
-    monitor: val/loss_simple_ema
+    monitor: train/loss_simple_step
     scale_factor: 0.18215
     embedding_reg_weight: 0.
     use_ema: False # LDMs
@@ -49,7 +49,7 @@ model:
       target: ldm.models.autoencoder.AutoencoderKL
       params:
         embed_dim: 4
-        monitor: val/rec_loss
+        monitor: train/loss_simple_step
         ddconfig:
           double_z: true
           z_channels: 4
@@ -92,16 +92,16 @@ data:
         per_image_tokens: False
         repeats: 10
 
-
 lightning:
+  # overwrite the default callbacks
   callbacks:
     image_logger:
       target: main.ImageLogger
       params:
-        batch_frequency: 110000
-        max_images: 8
+        batch_frequency: 500
+        max_images: 4
         increase_log_steps: False
 
   trainer:
     benchmark: True
-    max_steps: 100000
+    max_steps: 50000
